Работа с шапкой на странице

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "gratia",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint 'source/sass/**/*.scss' --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp style",
+    "start": "gulp serve"
   },
   "repository": {
     "type": "git",
@@ -26,14 +30,8 @@
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-wait": "0.0.2",
-    "stylelint": "^9.1.1"
-  }
-  "scripts": {
-    "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint 'source/sass/**/*.scss' --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp style",
-    "start": "gulp serve"
+    "stylelint": "^9.1.1",
+    "stylelint-config-htmlacademy": "^0.1.1"
   },
   "browserslist": [
     "last 2 versions",
